This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
6/27/23: SEM_4-0-26
6/27/23: Fixed program getting stuck or crashing when spot intensity
calibration is canceled at one of the entry boxes (In 4.0).

6/27/23: Made JEOL's rotation angle be reasserted every time JEOL scope goes
back into STEM.

6/27/23: Changed UI Automation calls used to change aperture size, which fixed
problems on at least one Windows 10 scope.

6/27/23: Added DummyInstance property, changed program startup so it has same
effect as /DUMMY argument, added message box when trying to start a second
non-DUMMY instance.

6/27/23: Made script stopped with Python error be properly marked as not
completed, so Acquire at Items keeps Acquire flag on.

6/27/23: Added script command to add a circle polygon.

6/27/23: Made SkipAcquiringNavItem work when used in main script.

6/27/23: Made scripts be stopped instead of suspended when run with
NoMessageBoxOnError set.

6/27/23: Added script command to accumulate Record dose in multiple areas and
provide them as prior dose values in the mdoc files.

6/27/23: Fixed problem with file locks preventing file removal and other
operations when running a Python script.

6/21/23: Allowed adding Navigator items on centered cropped image.

6/21/23: Prevented adding Navigator items on a cropped image (In 4.0).

6/17/23: Added property for specifying a dummy instance.

6/17/23: Kept track of whether a cropped image was centered and allowed
Navigator display on such an image.

6/17/23: Assigned a different port for running Python from a Dummy instance of
SerialEM (In 4.0).

6/17/23: Fixed type of "feature" entry to SnapshotToFile from Python (In 4.0).

6/16/23: Added script commands to get the transformations between image buffer